--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -566,7 +566,7 @@ The cultural aspects of the learning community are further explored in Chapter 7
 Is there something that merits mentioning here as a link withing Ch.7?
 
 
-## GDPs used in the process of guided participation
+## GDPs used in the process of guided participation (Target 2500)
 
 This section explores data on the use of GDP from the perspective of interpersonal interaction the process of being guided into planned activity or peer work which is exploratory but helps developing of interpersonal processes which serve the completion of the activity. From observations of video data, I observe how GDPs are used in diverse  meditational strategies by different participants.
 
@@ -579,7 +579,7 @@ This section examines the use of GDPs to facilitate guided participation via int
 . -->
 
 
-### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials
+### GDPs and their grouping as a collection or menu of suggested options, offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials (600)
 
 <!-- DRAW ON CHAPTER 4 MUTUAL EVOLUTION - AND FIND EXAMPLES . -->
 
@@ -786,7 +786,7 @@ NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
 
-### GDPs aiding the process of organisation and division of labour (2000)
+### GDPs aiding the process of organisation and division of labour (1800)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
@@ -862,7 +862,7 @@ The parent outlines her strategies used to address lack of reading ability as a 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
 
 
-### Discussion on division of labour in the video data
+#### Discussion on division of labour in the video data
 
 
 **Leveraging the possibilities of emerging divisions of labour:**  While the context of the participants as families involved in home education makes any general claims difficult, these observations support  exist in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work parents can fulfil several,reciprocal roles including, collaborator, resource provider, learner, non-technical consultant and emotional support [@barron_parents_2009].
@@ -899,16 +899,13 @@ Molly: Oh X. Alright Bubs. Thanks. -->
     <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
 
 
-
-
-Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
-
 This approach appears to be influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary). Interview extracts (included as appendices) show a direction to support the novices direction as a facilitator where possible.
 
     I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. It's that key. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dave did something really quickly. I don't know what it was.".
 
 This extract from interview data indicates a priority to support the learner to develop independently but to still be very present in the support process.
 
+Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
@@ -944,7 +941,7 @@ NOTE - check if this fits
 Once the code for the new game mechanic has been added, the child is guided to take on challenge of making smaller changes that give rapid feedback.  To aid the process the parent navigates to a particular part of the code for child to alter design. The changes the child makes have a large impact on the end users experience.
  -->
 
-### The role of GDP used in emerging technical processes
+### The role of GDP used in emerging technical processes (900)
 
 <!-- tool use, technical processes and specialist language -->
 <!-- EDIT DOWN ALREADY COVERED IN CHAP 5? -->
@@ -970,7 +967,7 @@ The following paragraphs address x, y and z
 <!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
 
 
-The motivational factor for participants of seeing their GDP-related change in the game drove many to overcome and to become fluid in certain technical processes.  
+Whilst pursuing the motivation of seeing their GDP-related change in the game many participants become fluid in certain aspects of general computer use and more specific technical processes involved with software use of game making tools.  
 
 Examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
@@ -986,7 +983,7 @@ In Vignette 5.e, after giving feedback on the jump speed Molly's game Ed sharing
 
     "Ed: for people with background like yours You can use the cramping tool."
 
-Ed leads Molly to his workstation and involves his father Mark in the process. Mark uses an example of a GDP in his explaination of why to undertake that process, to not "set things off when you are close to them"
+Ed leads Molly to his workstation and involves his father Mark in the process. Mark uses an example of a GDP in his explanation of why to undertake that process, to not "set things off when you are close to them".
 
 Thus rather than GDPs helping the graphical cropping process, it provokes Ed to notice and suggest it to Molly, and Mark to evoke it as a reason to undertake cropping.  
 
@@ -1019,7 +1016,7 @@ Orienting coding around GDPs highlights the desired impact on the game which may
 Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targed GDP may have a similar or even  potential for motivation. EXPLAIN?
 
 
-## The role of GDPs in the personal appropriation of concepts and processes
+## The role of GDPs in the personal appropriation of concepts and processes (500 - Target 750)
 
 **computational, design and systems concepts**
 
@@ -1034,7 +1031,14 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
-Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games. In the previous chapter, the use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
+While, this thesis focuses on community aspects in line with my own interests, There are significant possibilities to alter this design to suit more exploration of systems concepts and computational thinking. I have written a chapter which explores these aspects with recommendations for practitioners [@chesterman_game_2023], a summary of which and an additional commentary follows.
+
+One of my tensions explored in chapter 5 and explored in Appendix.designnarrative2 was between a motivation to align the learning experience of making games to computational thinking.  
+
+I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower still of completing one of several actions to complete the implementation of a GDP.
+
+
+Facilitators can use a prepared collection of GDPs to facilitate participants to surface chosen computational, design and systems concepts embedded in games. The use of a map of learning dimension in the studies design was examined in relation to contextual tensions relating to the motivations surrounding of curriculum concepts.
 OR WAS IT - WAS THIS CUT?
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
@@ -1057,7 +1061,6 @@ This can help justify activities in formal contexts as per Bevan and Petrich's w
 
 <!-- , I could trust my instincts as a facilitator to not detract attention from participants following an organic and flexible pattern of implementation, self-testing, improvement and playtesting. -->
 
-I also noted my own caution about overloading learners with shifting and competing goals. My concern hinged on the potential disorientation of the learner that imposed shifts of focus may provoke. As learners shift between different stages of creation the object of their activity shifts from the larger goal of making an engaging game to a narrower goal of implementing a game design pattern to narrower stoill of completing one of several actions to complete the implementation of a GDP.
 
 <!-- In the language of activity theory the change of objective denotes is a shift in scope of the activity system. -->
 
@@ -1077,9 +1080,7 @@ EXAMPLE/S:
 
 BRIEF EXAMPLES FROM DATA FOLLOW
 
-Following Papert and subsequent research on Microworlds, learning designers shape what they want learners to encounter and explore [research on Microworlds]. While, this thesis focuses on community aspects in line with my own interests, I have written a chapter which explores There are significant possibilities to alter this design to suit more exploration of systems concepts and computational thinking.
-NOTE - INCLUDE REFERENCE TO CHAPTER
-
+Following Papert and subsequent research on Microworlds, learning designers shape what they want learners to encounter and explore [research on Microworlds].
 
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
