clarifying technical processes

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -995,7 +995,24 @@ Code patching is a processes which suits being organised around GDPs aligns with
 
 The patches, and patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
 
-The video data which addresses the errors that the technical process brings up opens some interesting lines of questioning which are beyond the full remit of this research but are included as promising areas.  
+**Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
+
+In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing and build proficiency and flexibility in addressing them. Reflections on participant experiences of kinds of errors are explored in Appendix.tech.2. In the appendix I reflect on syntax errors which stopped the game from working entirely, bugs where code changes had no effect on the game and glitches which don't crash the game instead creating an unintended effect.
+
+Glitches merit a summary here as a particularly interesting site of guided participation.
+
+In my reflective notes I propose that glitches are more motivating to correct than other errors.
+
+
+Aspects of the design, use of a starting template and supporting resources based on code snippets and thus code patching process increased appear to encourage glitch bugs.
+See Vignette 1 for an example.
+
+MOVE?
+A diversity of strategies in responding to errors evolved as I judged when participants to be receptive to different forms of input. Glitch errors were often embraced as curiosities and as a learning opportunity to understand the related code and associated abstract concepts using a concrete example afforded by the mechanics of the game design pattern.
+
+**Discussion**
+
+This area opens some interesting lines of questioning which are beyond the full remit of this research but are included as promising areas.  
 
 - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
@@ -1003,18 +1020,14 @@ The video data which addresses the errors that the technical process brings up o
   - How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
 
 
-**Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
+Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targeted GDP may have a similar or even  potential for motivation.
+EXPLAIN?
+
+
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
-In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing: syntax errors, no behaviour bugs and glitches. These are explored in Appendix.tech.2.
-
-As an illustrative example we can look at glitch errors which don't crash the game instead creating an unintended effect. Not fully understanding every line of code can create a fun, unpredictable environment.
-
-Orienting coding around GDPs highlights the desired impact on the game which may help affect towards solving bugs. The appendix examples suggest that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design, supporting resources and suggested practices  encourage this kinds of error. Certainly the process of code patching does.
-
-Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targed GDP may have a similar or even  potential for motivation. EXPLAIN?
-
+The debugging process at times surfaced and allow the exploration of surfacing of computational thinking concepts, a topic explored as part of the next section.
 
 ## The role of GDPs in the personal appropriation of concepts and processes (500 - Target 750)
 
