editing down dol

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -792,15 +792,10 @@ The use of GDPs to scaffold the ideation process was a common pattern used by X 
 CHECK FOR OVERLAP-->
 
 
-GDPs are referenced as an way of prioritising work and organising it via division on labour.
-BRIEF SUMMARY OF SECTION.
-
-**Participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. Participants split work between them and resolve problems. GDPs feature in processes of division of labour in a variety of ways.**
+GDPs feature in processes of organisation, prioritisation and division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns, use of GDP concepts as a lingua franca
 
 
-#### Working knowledge of different types of GDPs can help participants to divide project elements by pattern
-
-The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers.
+<!-- The implementation of some GDP involved the use of different tools and activities. As learners build the familiarity with the component actions needed to implement design patterns, some start to specialise as they divide labour between pairs or peers. -->
 
 **GDPs are used a lingua franca and as shortcuts by participants when organising and prioritising work**
 
@@ -808,59 +803,55 @@ The implementation of some GDP involved the use of different tools and activitie
 
 <!-- Online version as table - https://docs.google.com/document/d/1wLx8j9djYqJdZHwKJ09mmIDMYO7YqlMDhuHx2hiqpJI/edit -->
 
-GDPs were used to try to organise and prioritise game making activity. An exchange between participants Ed and Mark shows a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise one work to be done.
+GDPs terms are frequently used to try to organise and prioritise game making activity.
+
+In Vignette 5.d, where the parent Molly wants to export an image from the graphical editing tool and to import this into the game, shows an evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction.
+
+The terms here are used first to request help, and then to discuss emerging community norms.
+
+OTHER DATA ON GDP AS LINGUA FRANCA AT VARIOUS STAGES.
+<!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
+
+The following exchange from Vignette 4 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work.
 
     Mark: I’ve brought the music, and also we could just concentrate on one thing and just change that. You know, keep working through.
     Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
     Mark: So you want to get your person animated that’s the main thing.
     Mark: Shall we concentrate on that and changing the platforms into something different?
 
-The pair's initial listing of features is a brainstorming technique aid a creative process, in this case use of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis seed the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".   He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a plodding.
+The pair's initial listing of features is a brainstorming technique uses of the approximate names of of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "that’s what I mean, you can’t just skip around like that".   He appears to be keen to quickly pick one pattern, then then work through the documentation on that pattern, a process he later refers to in interview data a _plodding_. At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally, appearing to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a more experimental process. The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour.
 
-At a different stage Mark is engaged puzzling over documentation on how to add animation to a character for some time. This results in Ed being blocked from progressing. In an exchange listed in Vignette 4, the child proposes dividing their labour informally.
+<!-- The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward. -->
 
-At this stage, the child appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating assets in non-code / GUI environments.
+<!-- LINK TO THE TECHNICAL SECTION. NOT SRE WHY?  -->
 
-The use of GDPs concepts here is used in the young person's circumvention of a tension via his informal division on labour. Specifically they are able to avoid waiting for their father and moving different parts of the overall project forward.
-
-<!-- #### Use of GDPs in the development of shared language to support joint work  -->
-MOVE MOST OF THIS TO APPENDIX / VIGNETTE
-
-**Language which has been introduced facilitator interventions is then modified and used organically through community interaction.**
+it is of value to link this use of GDPs terminology as part of the development of shared language to support joint work and guided participation. INSERT RESEARCH on joint attention, and joint problem space and the importance language in this process from a sociocultural perspective.
 
 
-The following example shows a patchy but evolving use of some of the terminology that has been introduced partly by facilitator interventions and partly emerging organically through community interaction. As the community adopt the practices the become community norms.
+**Division of Labour**
 
-In Vignette 5.b.3, Molly, the mother wants to export an image from the graphical editing tool and to import this into the game. The mother's focus has been on creating graphics and has expressed pride in this her growing expertise in this area. She asks her daughter for help "I want the aliens to be the hazard, the rockets to be the gold coins and the spaceman to be the character." The mother shows a developing proficiency of expressing GDP related concepts and language as this interaction develops. Nadine  appears to enjoy using the language and norms of game culture to tease her mother. "Who wants a rocket for their reward?" Here the daughter recognises the GDP of reward after used by her mother but questions the aesthetic choice and its appeal to game players.
+Addressing division of labour more generally, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work.
 
-In Vignette 5.b.3, the child takes on the role of guiding her mother to export graphics from Piskel gallery to the hard drive as a downloaded image file before them importing it to he code project and updating the relevant lines of code. The mother demonstrates her increased level of understanding and participation on overall process after being playfully challenged by daughter about her use of technical language. "Do you even know what export means?". Emerging laguage is used blending both technical terms like _export_ with more folk terms _getting it in the game_ rather than importing.  
-
-Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
-demonstration agency or growing status within this community.
-
-<!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
-
-LINK TO THE TECHNICAL SECTION.
-
-#### Structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
+Turning to the use of GDPs specifically in DoL as an organisational strategy,  structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour
 
 <!-- Structuring code implementation on relatively small code stages of GDP implementation steers the production process towards relatively frequent iterations of design cycle. Specifically the design stages here typically involve; ideation, planning, implementation, testing and modification and sharing via playtesting. THIS IS EXPLORED IN THE NEXT CHAPTER SO DROP OR ONLY BRIEFLY REFERENCE. -->
 
-Sh and Olivia relied on the parent to do the majority of code implementation and shared one computer. Vignette 1 shows the child use the name of a GDP as a way to communicate about the shared work of making a game.
+Analysis of video data uncovered flexible way in which the participant divided the process of game making, often showing traces of home collaboration practices. For example, In vignette 2, Suzanna(p) and Olivia(c) relied on the parent to do the majority of code implementation and shared one computer. The pair also alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles."
+
+In an illuminating exchange, Olivia uses the name of a GDP within a request for her parent to take on a specific task within their making process.
 
      Olivia: Go on then. Key - Door - Person.
      Suzanna: Person?
      Olivia: Key Door Person.
      Olivia gestures with her hands to indicate that her mother is the person she is referring to.
 
-The utterance by the child "Key Door Person"  work on the game design pattern called Keys and Doors to the adult. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother. Feedback from the parent indicated that this division of labour was partly due to reading ability.
+The utterance by the child "Key Door Person"  work on the game design pattern called Keys and Doors to the adult.
 
-    "Olivia got on better during the coding once the student who was hovering initially left us alone. Because every time Olivia hesitated, she jumped in to do it for her. Whereas I know her better so can judge how to facilitate more minimally, and I resist the urge to fix things immediately when she struggles.  Plus she can't read yet, so she was recognising the relevant bits of code by matching the individual letters, which takes longer."
+The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
 
-The parent outlines her strategies used to address lack of reading ability as a barrier to participation. The design choice of a grid of letters representing different elements of the platform game appears appropriate in the case of a novice learning to code and read at the same time.  After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
+While, the parent took driving seat to overcome code blockages they were careful to then involve the child to input their design choices when solved.
 
-Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
-
+After the child has delegated a coding task to her mother she undertakes other activities. At times her activities directly contribute to the main goal of game making. At times the parent asked the child to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times she engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
 #### Discussion on division of labour in the video data
 
@@ -873,39 +864,15 @@ Thus, in response to the creative support that parents and siblings provide, fac
 
 While these examples involve GDPs others are explore in relation to development of agency in the following chapter. The examples above illustrate, part some of the varied strategies to  divisions of labour adopted by participants at times involving  complex tensions in activity. For example  Molly and Nadine reversed traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPS but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't. Similarly, while Olivia's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as  legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
 
+The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. Toby and Dan's pair process  is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
 
+In the second part of vignette 7, Dan(p) outlines a similar approach to Suzanna(p) in resisting _jumping in_. "I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do." This approach is  guided influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (gly).
 
-<!-- NOTE - COVERT TO TABLE?
+This example sees Dan(p) shifting the kind of helping role as he progresses through different stages of applying a GDP.
 
-Molly continues to do solo design using the Piskel graphical too. She encounters a design problem. When erasing a part of the design she gets rid of background colour. Molly asks for help from partner but receives misleading advice which does not help her progress.
-Molly:  Oh no it’s not done that has it?
+In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
 
-Molly calls the name of her child across room with theatrical gesture and loud whisper voice
-Molly: “Nadine !”
-Molly then makes face, wiggles head and shrugs at parent peer. The other parent laughs.
-Nadine arrives to help. -->
-
-
-<!-- Nadine uses the mouse to select the grey background colour with the colour picker tool, then the pen tool to fill in gaps in the design. She then swaps the active colour back from grey to black by clicking the option to swap foreground and background colours.
-Molly - How did you do that so quickly? I’ve got to like, carefully... (makes hand gestures to show a sense of hesitant keyboard use)
-Parent peer laughs
-Nadine bounces up in place and smiles broadly.
-Molly: Thanks
-Molly: So am I like back with the black now?
-Nadine : Yeah but if you want to delete it just press X (which switches between foreground and background colours) and then do it.
-Molly: Oh X. Alright Bubs. Thanks. -->
-
-
-    <!-- NOTE - this is a secondary examples - where GDPs as a concept are not vital. -->
-
-
-This approach appears to be influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary). Interview extracts (included as appendices) show a direction to support the novices direction as a facilitator where possible.
-
-    I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. It's that key. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dave did something really quickly. I don't know what it was.".
-
-This extract from interview data indicates a priority to support the learner to develop independently but to still be very present in the support process.
-
-Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
+While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section. 
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
@@ -917,21 +884,7 @@ Toby and Dan's pair process of accessing professional documentation also illustr
 Perhaps in the field of participatory design. -->
 
 
-<!-- NOTE - LINK TO PREVIOUS CHAPTER ON FLEXIBILITY OF DESIGN -->
 
-<!-- In a following example we see child Nadine helping her mother to overcome coding blockages. -->
-<!--
-A SECTION HERE THAT COULD BE REPLACED.
-
-
-ADD TRANSCRIPT EXAMPLE FROM  -  2019-03-18-mi
-Molly - Oh thank you very much. I'm very proud.
- -->
-<!--
-NOTE - MOVE TO LATER CHAPTER AS ILLUSTRATIVE OF FLEXIBLE DESIGN?
-
- While the father was keen to prioritise and then complete one pattern, the child takes a more piecemeal approach. Later in the session the father then gets drawn into creating audio assets after observing his son searching for suitable tools. The father becomes distracted from his stated task as he is responsive to help the child when they get stuck on an alternative pathway they have chosen to avoid waiting on the parent. While this may be stressful for the parent, lots of progress in the overall game project can be observed in any particular session and the child seems to be developing useful skills managing the parent. -->
- <!-- both with the familiar graphical asset tool Piskel and exploring new territory by researching an seeking a new tool for creating audio assets, specifically a background theme tune . -->
 
  <!-- While there was no formal organising of groups in phase 2 and 3, the family bonds between parents and children created similar patterns of seeking validation, sharing planning. Although this was more the case for dyads working side-by-side on the same game, similar patterns existed for other configurations. -->
 
